# tauri-app-template-win7

./: CLAUDE.md  LICENSE  README.md  build-backend.ps1  build-backend.sh  package-lock.json  package.json  prebuild.js
.claude/commands/: add-resource.md
backend/: .air.toml  go.mod  main.go  server.go
backend/handler/: user_handler.go
backend/infra/: db.go
backend/model/: user.go
backend/repository/: user_repository.go
backend/repository/memory/: user_repository.go
backend/repository/sqlite/: user_repository.go
backend/service/: user_service.go
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/hooks/: useBackend.ts
