[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri v1 + Go template targeting Windows 7 SP1 (POSReady 7)"
authors = ["NOGU-LAB"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [
  "shell-sidecar",
  "shell-open",
  "path-all",
  "fs-create-dir",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Win 7 対応 (Rust 1.75) では edition 2024 (Rust 1.85+) 要求の transitive crate を避ける
# 必要に応じて追加 pin する
[patch.crates-io]
time = { version = "=0.3.36" }
litemap = { version = "=0.7.5" }
zerovec = { version = "=0.10.4" }
zerovec-derive = { version = "=0.10.3" }
icu_collections = { version = "=1.5.0" }
icu_locid = { version = "=1.5.0" }
icu_locid_transform = { version = "=1.5.0" }
icu_locid_transform_data = { version = "=1.5.0" }
icu_normalizer = { version = "=1.5.0" }
icu_normalizer_data = { version = "=1.5.0" }
icu_properties = { version = "=1.5.1" }
icu_properties_data = { version = "=1.5.0" }
icu_provider = { version = "=1.5.0" }
icu_provider_macros = { version = "=1.5.0" }
tinystr = { version = "=0.7.6" }
yoke = { version = "=0.7.5" }
yoke-derive = { version = "=0.7.5" }
zerofrom = { version = "=0.1.6" }
zerofrom-derive = { version = "=0.1.6" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
