[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri v1 + Go template targeting Windows 7 SP1 (POSReady 7)"
authors = ["NOGU-LAB"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [
  "shell-sidecar",
  "shell-open",
  "path-all",
  "fs-create-dir",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Win 7 対応 (Rust 1.75) のため edition 2024 (Rust 1.85+) 要求の transitive crate を
# 直接 dependency に列挙して resolver に古いバージョンを選ばせる
time = "=0.3.36"
litemap = "=0.7.5"
zerovec = "=0.10.4"
zerovec-derive = "=0.10.3"
icu_collections = "=1.5.0"
icu_locid = "=1.5.0"
icu_locid_transform = "=1.5.0"
icu_locid_transform_data = "=1.5.0"
icu_normalizer = "=1.5.0"
icu_normalizer_data = "=1.5.0"
icu_properties = "=1.5.1"
icu_properties_data = "=1.5.0"
icu_provider = "=1.5.0"
icu_provider_macros = "=1.5.0"
tinystr = "=0.7.6"
yoke = "=0.7.5"
yoke-derive = "=0.7.5"
zerofrom = "=0.1.6"
zerofrom-derive = "=0.1.6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
