[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri v1 + Go template targeting Windows 7 SP1 (POSReady 7)"
authors = ["NOGU-LAB"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [
  "shell-sidecar",
  "shell-open",
  "path-all",
  "fs-create-dir",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Win 7 対応は Rust 公式の Tier 3 ターゲット x86_64-win7-windows-msvc を使う
# (stable + `rustup target add x86_64-win7-windows-msvc` で利用可能)
# このターゲットは ProcessPrng の代わりに RtlGenRandom を使うため Win 7 で動く

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
